# ChangeLog for media-sound/cdplay
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/cdplay/ChangeLog,v 1.10 2004/10/19 03:26:52 tgall Exp $

  18 Oct 2004; Tom Gall <tgall@gentoo.org> cdplayer-0.9.ebuild:
  stable on ppc64, bug #64542

  14 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> cdplay-0.9.ebuild:
  Stable amd64, sparc.

  07 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> cdplay-0.9.ebuild:
  ~sparc ~amd64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> cdplay-0.8.ebuild,
  cdplay-0.9.ebuild:
  virtual/glibc -> virtual/libc

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> cdplay-0.8.ebuild,
  cdplay-0.9.ebuild:
  Stable on x86.

*cdplay-0.9 (20 Sep 2003)

  20 Sep 2003; jje <jje@gentoo.org> cdplay-0.9.ebuild:
  Version bump.

*cdplay-0.8 (5 May 2002)

  05 Aug 2002; Calum Selkirk <cselkirk@gentoo.org> cdplay-0.8.ebuild :

  Added ppc to KEYWORDS.

  5 May 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.