@@ -1,6 +1,6 @@
-MD5 36e2fee6bd6bf5f395474e34f59b8ef8 ChangeLog 1406
-MD5 6901ff6ce4e27a1006e27c1381e1244c cdplay-0.8.ebuild 531
-MD5 b644976731a9f47b8d9a9fa70df89d66 cdplay-0.9.ebuild 541
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 ba85a6558e2cc80055df4c00c4d9fefb files/digest-cdplay-0.8 61
+MD5 ac5de2fb9c47daf8564a7234e02ec35d ChangeLog 1498
+MD5 cf699603648a6125e45c71895dfc899a cdplay-0.8.ebuild 527
+MD5 7bff6725403e92d1070e73b1a5599ca9 cdplay-0.9.ebuild 542
 MD5 3e3dde53ad1c4a5636e01d91fb71de37 files/digest-cdplay-0.9 61
+MD5 ba85a6558e2cc80055df4c00c4d9fefb files/digest-cdplay-0.8 61
