@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cdplay/cdplay-0.8.ebuild,v 1.11 2004/07/01 07:49:32 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cdplay/cdplay-0.8.ebuild,v 1.12 2005/03/30 16:32:35 hansmi Exp $
 
 DESCRIPTION="Console CD Player"
 SRC_URI="http://www.x-paste.de/files/${P}.tar.gz"
