@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/cdplay
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cdplay/ChangeLog,v 1.10 2004/10/19 03:26:52 tgall Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cdplay/ChangeLog,v 1.11 2005/03/30 16:32:35 hansmi Exp $
+
+  30 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> cdplay-0.9.ebuild:
+  Stable on ppc.
 
   18 Oct 2004; Tom Gall <tgall@gentoo.org> cdplayer-0.9.ebuild:
   stable on ppc64, bug #64542
